--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,7 +3,9 @@ $color_one_seconde: #788bff;
 $color_two: #9bb1ff;
 $color_there: #bfd7ff;
 $color_for: #e2fdff;
-$backgroud_size_blob: 15rem;
+.color-black {
+  color: black !important;
+}
 @font-face {
   font-family: "vazir";
   src: url("../fonts/Vazir-Medium.eot") format("eot"),
@@ -408,5 +410,126 @@ footer {
         display: inline;
       }
     }
+  }
+}
+.form-project {
+  width: 100%;
+  height: auto;
+  background: white;
+  padding: 1rem;
+  padding-top: 0.5rem;
+  border-radius: 10px;
+  border: 2px solid #ebe8f5;
+  -webkit-box-shadow: 0 0 8px 2px #e8e8e8;
+  box-shadow: 0 0 8px 2px #e8e8e8;
+
+  .inputs {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 15px;
+    .input-cover {
+      margin: 10px;
+      display: inline-block;
+      position: relative;
+      p {
+        font-size: 14px;
+        margin: 10px 0;
+        text-align: center;
+        margin-bottom: 0;
+      }
+      input {
+        border: none;
+        border-bottom: 2px solid $color_one;
+        padding: 10px;
+        padding-bottom: 5px;
+        font-family: "vazir";
+        &:focus + label,
+        &:valid + label {
+          top: -15px;
+          right: 5px;
+          font-size: 14px;
+          color: rgb(255, 57, 22);
+        }
+        &:valid + label {
+          color: $color_one_seconde;
+        }
+      }
+      label {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        transition: all 0.3s ease-in-out;
+      }
+    }
+  }
+  .input-cover#text-area {
+    margin: 20px 0;
+    position: relative;
+    height: 150px;
+    textarea {
+      min-width: 100%;
+      max-width: 100%;
+      max-height: 100%;
+      min-height: 100%;
+      padding: 15px;
+      font-size: 16px;
+      font-family: "vazir";
+      border: 2px solid #ebe8f5;
+    }
+    label {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      transition: all 0.3s ease-in-out;
+    }
+    textarea:focus + label,
+    textarea:valid + label {
+      top: -20px;
+      right: 5px;
+      font-size: 14px;
+      color: rgb(255, 57, 22);
+    }
+    textarea:valid + label {
+      color: $color_one_seconde;
+    }
+  }
+}
+
+.button-more {
+  padding: 5px 18px;
+  background: $color_one_seconde;
+  margin-top: 20px;
+  position: relative;
+  font-family: 'vazir';
+  border-radius: 5px;
+  color: white;
+  border: none;
+  font-size: 17px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  &:hover {
+    box-shadow: 0 0 10px 1px $color_two;
+  }
+  &:hover:before {
+    -webkit-animation: shine 0.5s 0s linear;
+    -moz-animation: shine 0.5s 0s linear;
+    animation: shine 0.5s 0s linear;
+  }
+  &:before {
+    content: "";
+    display: block;
+    width: 0px;
+    height: 86%;
+    position: absolute;
+    top: 7%;
+    left: -50%;
+    opacity: 0;
+    background: $color_for;
+    box-shadow: 0 0 15px 3px $color_for;
+    -webkit-transform: skewX(-20deg);
+    -moz-transform: skewX(-20deg);
+    -ms-transform: skewX(-20deg);
+    -o-transform: skewX(-20deg);
+    transform: skewX(-20deg);
   }
 }
