--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -54,6 +54,15 @@
     margin-top: 125px;
   }
 }
+@media screen and (max-width: 720px) {
+  .form-project .inputs {
+    flex-direction: column;
+    align-items: center;
+    input {
+      width: 350px;
+    }
+  }
+}
 @media screen and(max-width:660px) {
   header {
     &.small-header {
