--- a/sass/style.scss
+++ b/sass/style.scss
@@ -543,3 +543,12 @@ footer {
     transform: skewX(-20deg);
   }
 }
+#image-404 {
+  width: 80%;
+  margin: 30px auto;
+  display: block;
+  height: 550px;
+}
+.cursor {
+  cursor: pointer;
+}
