--- a/Backend/Views/Home/Index.cshtml
+++ b/Backend/Views/Home/Index.cshtml
@@ -3,10 +3,35 @@
     <title>محمد مهدی</title>
 }
 @{
-    var listXp = ViewBag.ListXp;
+    var listXp = ViewBag.ListXp as List<MyXp>;
+    var listUrl = ViewBag.ProjectSuccesUrl;
+    var listPost = ViewBag.ListPost as List<GetAllPostViewModel>;
 }
-@model List<MyXp>
-
+<p>
+    page count =>  @ViewBag.pageCount
+    page id => @ViewBag.PageId
+</p>
+<partial name="AddProject" />
+@section headerContianer {
+    <div class="header-container">
+        <div>
+            <h4>درباره ی من</h4>
+            <p>
+                من محمد مهدی دبستانی هستم . طراح و توسعه دهنده ی وب از سال 1397 شروع
+                کرده ام . در شاخه ی وب با تکنولوژی هایی کار کرده ام که قسمت پایین میتونید ببینید . همچنین شما
+                میتوانید که رزومه ی من رو از طریق <a href="/CV.pdf" download>لینک</a> دریافت کنید
+            </p>
+            <li>
+                <a uk-toggle="target: #add_project_modal">
+                    ثبت پروژه
+                </a>
+            </li>
+        </div>
+        <div>
+            <img src="/images/logo.png" alt="Logo Mohamadmehdi" />
+        </div>
+    </div>
+}
 <div class="uk-container my-xp">
     <div class="uk-grid-column-small uk-grid-row-small uk-child-width-1-3@s uk-grid-match" uk-grid>
         @foreach (var xp in listXp)
@@ -20,6 +45,28 @@
         }
     </div>
 </div>
+<div id="modal" class="uk-flex-top" uk-modal>
+        <div class="uk-modal-dialog" uk-overflow-auto>
+            <div class="uk-modal-header">
+                <h2 class="uk-modal-title">آدرس سایت ها :</h2>
+            </div>
+
+            <div class="uk-modal-body">
+
+                <button class="uk-modal-close-default" type="button" uk-close></button>
+                <ul>
+                    @foreach (var url in listUrl)
+                    {   
+                        <li><a href="@url">@url</a></li>
+           
+                    }
+                </ul>
+            </div>
+            <div class="uk-modal-footer uk-text-right">
+                <button class="uk-button uk-button-default uk-modal-close" type="button">بستن</button>
+            </div>
+        </div>
+</div>
 <!-- certificates -->
 <div class="list-certificate">
     <div class="uk-container">
@@ -27,20 +74,20 @@
         <div class="uk-grid-column-small uk-grid-row-small uk-child-width-1-3@s uk-grid-match" uk-grid>
             <div>
                 <div class="project">
-                    <img src="./images/icons8-mission-100.png" alt="" />
-                    <p>پروژه ی موفق : 1</p>
+                    <img src="/images/icons8-mission-100.png" alt="" />
+                    <p uk-toggle="target: #modal"  class="cursor" >پروژه ی موفق : @ViewBag.ProjectSucces </p>
                 </div>
             </div>
             <div>
                 <div class="project">
-                    <img src="./images/working.svg" alt="" />
-                    <p>پروژه درحال انجام : 0</p>
+                    <img src="/images/working.svg" alt="" />
+                    <p>پروژه درحال انجام : @ViewBag.ProjectWorking</p>
                 </div>
             </div>
             <div>
                 <div class="project">
-                    <img src="./images/error.svg" alt="" />
-                    <p>پروژه ی شکست خورده : 0</p>
+                    <img src="/images/error.svg" alt="" />
+                    <p>پروژه ی شکست خورده : @ViewBag.ProjectFaild</p>
                 </div>
             </div>
         </div>
@@ -49,24 +96,26 @@
 <div class="uk-container uk-margin-medium-top">
     <h3>آخرین پست ها :</h3>
     <div class="uk-grid-column-small uk-grid-row-small uk-child-width-1-3@s uk-grid-match" uk-grid>
+        @foreach (var post in listPost)
+        {
+            
         <div>
             <div class="uk-text-center example-work">
                 <div class="image-example">
-                    <a href="#">
-                        <img src="./images/Work time-amico.svg" alt="image" />
+                    <a href="/post/@post.id">
+                        <img src="/PostImages/@post.ImageName" alt="@post.AltImage" />
                     </a>
                 </div>
                 <div class="example-work-text uk-padding-small">
-                    <h4 class="uk-text-right uk-margin-small">وب سایت Decortina</h4>
+                    <h4 class="uk-text-right uk-margin-small">@post.Title</h4>
                     <p class="uk-margin-remove">
-                        در این پست قرار است که ما بررسی کنیم که وب سایت Decortina حدف آن چیست و با با چه تکنولوژی
-                        هایی درست شده است
+                        @post.Description
                     </p>
                     <div class="svg-wrapper">
                         <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
                             <rect id="shape" height="40" width="150" />
                             <div id="text">
-                                <a href="/Post.html">
+                                <a href="/post/@post.id">
                                     <span class="spot"></span>
                                     ادامه ی مطلب
                                 </a>
@@ -76,69 +125,14 @@
                 </div>
             </div>
         </div>
-        <div>
-            <div class="uk-text-center example-work">
-                <div class="image-example">
-                    <a href="#">
-                        <img src="./images/lance-anderson-Cv-sME1Mxn8-unsplash.jpg" alt="image" />
-                    </a>
-                </div>
-                <div class="example-work-text uk-padding-small">
-                    <h4 class="uk-text-right uk-margin-small">عنوان پست</h4>
-                    <p class="uk-margin-remove">
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
-                        استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله
-                        در ستون و سطرآنچنان که لازم است و برای
-                    </p>
-                    <div class="svg-wrapper">
-                        <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
-                            <rect id="shape" height="40" width="150" />
-                            <div id="text">
-                                <a href="#">
-                                    <span class="spot"></span>
-                                    ادامه ی مطلب
-                                </a>
-                            </div>
-                        </svg>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div class="uk-text-center example-work">
-                <div class="image-example">
-                    <a href="#">
-                        <img src="./images/lance-anderson-Cv-sME1Mxn8-unsplash.jpg" alt="image" />
-                    </a>
-                </div>
-                <div class="example-work-text uk-padding-small">
-                    <h4 class="uk-text-right uk-margin-small">عنوان پست</h4>
-                    <p class="uk-margin-remove">
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
-                        استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله
-                        در ستون و سطرآنچنان که لازم است و برای
-                    </p>
-                    <div class="svg-wrapper">
-                        <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
-                            <rect id="shape" height="40" width="150" />
-                            <div id="text">
-                                <a href="#">
-                                    <span class="spot"></span>
-                                    ادامه ی مطلب
-                                </a>
-                            </div>
-                        </svg>
-                    </div>
-                </div>
-            </div>
-        </div>
+        }
     </div>
     <div class="uk-flex uk-flex-center uk-margin-medium-top">
         <ul class="uk-pagination" uk-margin>
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
+            @for(int i =1; i<=ViewBag.pageCount+1;i++)
+            {
+                <li class="@((ViewBag.PageId == i)?"uk-active":"")"><a href="/Home/Index?pageid=@i">@i</a></li>
+            }
         </ul>
     </div>
 </div>
