--- a/Backend/Views/_ViewImports.cshtml
+++ b/Backend/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
-@addTagHelper * , Microsoft.AspNetCore.Mvc.TagHelpers;
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Backend.Data;
+@using Backend.ViewModels;
