--- a/Backend/Views/Admin/CreatePost.cshtml
+++ b/Backend/Views/Admin/CreatePost.cshtml
@@ -20,6 +20,9 @@
       <div class="uk-margin">
         <input class="uk-input" type="text" asp-for="AltImage" placeholder="Alt Image" />
       </div>
+      <div class="uk-margin">
+        <input class="uk-input" type="text" asp-for="TitleOfBrowser" placeholder="TitleOfBrowser" />
+      </div>
       <input type="file" asp-for="Image" />
       <div class="uk-margin">
         <textarea class="uk-textarea" rows="5" placeholder="Text" asp-for="Text"></textarea>
