--- a/Backend/Views/Home/GetPost.cshtml
+++ b/Backend/Views/Home/GetPost.cshtml
@@ -37,6 +37,12 @@
                             }
                         </ul>
                     </div>
+                    <p>
+                        <a href="/admin/editepost/@Model.id" class="uk-button uk-button-primary uk-button-small">Edite</a>
+                    </p>
+                    <p>
+                        <a href="/admin/deletepost/@Model.id" class="uk-button uk-button-danger uk-button-small">Delete</a>
+                    </p>
                 </div>
             </aside>
         </div>
