--- a/Backend/Views/Shared/_Layout.cshtml
+++ b/Backend/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                 <a href="/">خانه</a>
             </li>
             <li>
-                <a href="/Project.html">پروژه دارم</a>
+                <a href="/CreateProject">پروژه دارم</a>
             </li>
             
         </ul>
